# taotie

./: Cargo.toml  README.md  cliff.toml
examples/: arrow-serde.rs  ndjson.rs  pq.rs  repl.rs
notebooks/: pyproject.toml
notebooks/.ipynb_checkpoints/: taotie-checkpoint.ipynb
src/: lib.rs  main.rs
src/backend/: data_fusion.rs
src/backend/fusion/: describe.rs  df_describe.rs  mod.rs
src/cli/: connect.rs  describe.rs  head.rs  list.rs  mod.rs  schema.rs  sql.rs
